fix image overflowing

--- a/src/app/components/services/services.module.scss
+++ b/src/app/components/services/services.module.scss
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  height: 36rem;
+  // height: 36rem;
   background-color: var(--secondary);
   display: grid;
   grid-template-columns: 1fr 1fr;
